linked html to js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Weather</title>
 </head>
 <body>
+    <script src="js/javascript.js" defer></script>
     <div class="weather">
         <div class="search">
             <input type="text" class="search-bar" placeholder="Search">
