--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <title>Weather</title>
 </head>
 <body>
@@ -21,6 +25,39 @@
             <p class="wind">Wind speed: 7.23 km/h</p>
             <p class="lon">Longtitude: -122.08</p>
             <p class="lat">Latitude: 37.39</p>
+        </div>
+    </div>
+    <br>
+    <div class="fiveday">
+        <div class="first1">
+            <h2 class="bir">Monday</h2>
+            <p class="date1">2022-01-04</p>
+            <h2 class="first">27.3°C</h2>
+            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon1">
+        </div>
+        <div class="second2">
+            <h2 class="eki">Tuesday</h2>
+            <p class="date2">2022-01-05</p>
+            <h2 class="second">27.3°C</h2>
+            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon2">
+        </div>
+        <div class="third3">
+            <h2 class="uch">Wendnesday</h2>
+            <p class="date3">2022-01-06</p>
+            <h2 class="third">27.3°C</h2>
+            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon3">
+        </div>
+        <div class="fourth4">
+            <h2 class="tort">Thursday</h2>
+            <p class="date4">2022-01-07</p>
+            <h2 class="fourth">27.3°C</h2>
+            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon4">
+        </div>
+        <div class="fifth5">
+            <h2 class="besh">Friday</h2>
+            <p class="date5">2022-01-08</p>
+            <h2 class="fifth">27.3°C</h2>
+            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon5">
         </div>
     </div>
 </body>
