Got rid of some bugs

--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
             <h2 class="bir">Monday</h2>
             <p class="date1">2022-01-04</p>
             <h2 class="first">27.3°C</h2>
-            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon1">
+            <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon1">
         </div>
         <div class="second2">
             <h2 class="eki">Tuesday</h2>
             <p class="date2">2022-01-05</p>
             <h2 class="second">27.3°C</h2>
-            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon2">
+            <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon2">
         </div>
         <div class="third3">
             <h2 class="uch">Wendnesday</h2>
             <p class="date3">2022-01-06</p>
             <h2 class="third">27.3°C</h2>
-            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon3">
+            <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon3">
         </div>
         <div class="fourth4">
             <h2 class="tort">Thursday</h2>
             <p class="date4">2022-01-07</p>
             <h2 class="fourth">27.3°C</h2>
-            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon4">
+            <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon4">
         </div>
         <div class="fifth5">
             <h2 class="besh">Friday</h2>
             <p class="date5">2022-01-08</p>
             <h2 class="fifth">27.3°C</h2>
-            <img src="https://openweathermap.org/img/wn/04n@.png" alt="" class="icon5">
+            <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon5">
         </div>
     </div>
 </body>
