--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
             <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon5">
         </div>
     </div>
+    <footer>
+        <p>This website was made by Eldiiar Kudaiberdiev and Elmir Bekmurzaev students of <u>Alatoo Internation University</u></p>
+    </footer>
 </body>
 </html>
