--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <footer>
-        <p>This website was made by Eldiiar Kudaiberdiev and Elmir Bekmurzaev students of <u>Alatoo Internation University</u></p>
+        <p>This website was made by Eldiiar Kudaiberdiev and Elmir Bekmurzaev students of <u>Alatoo International University</u></p>
     </footer>
 </body>
 </html>
