--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Weather</title>
 </head>
 <body>
+    <div class="navbar">
+        <nav class="navbar navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="img/weather.logo.jpg" alt="weather icon" width="30" height="24" class="top_weather_icon">
+            </a>
+          </div>
+        </nav>
+    </div>
     <script src="js/javascript.js" defer></script>
     <div class="weather">
         <div class="search">
