--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="" class="icon5">
         </div>
     </div>
-    <footer>
+    <footer class="footer">
         <p>This website was made by Eldiiar Kudaiberdiev and Elmir Bekmurzaev students of <u>Alatoo International University</u></p>
     </footer>
 </body>
