Added link into jQuery

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </div>
         </nav>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/javascript.js" defer></script>
     <div class="weather">
         <div class="search">
